Changes: - assigned views to the missing properties; - used AbstractMappingJacksonResponseBodyAdvice to change the body dynamically (currently changing the view depending on the request param), in a future - wrapping whole body into needed structure; - added request to add ontologies from without client side (from Swagger, cURL, postman) - only Github for now; - added mongodb debugging to application.properties; - added commit structure of the data received from Github;