@@ -11,6 +11,7 @@ import eu.tib.ontologyhistory.utils.FileUtils;
 import eu.tib.ontologyhistory.utils.OntologyUtils;
 import eu.tib.ontologyhistory.utils.ParserUtils;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.bson.Document;
 import org.geneontology.owl.differ.Differ;
@@ -31,8 +32,10 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.util.*;
 
-@Service
+
+@Slf4j
 @AllArgsConstructor
+@Service
 public class DiffService {
 
     private final DiffRepository diffRepository;
@@ -83,56 +86,62 @@ public class DiffService {
     }
 
 
-    public Diff makeDiffFromGit(DiffAdd diffAdd) throws Exception {
+    public Diff makeDiffFromGit(DiffAdd diffAdd) {
         String ontologyLeftFilename = "ontology-left";
         String ontologyRightFilename = "ontology-right";
 
         Path diffOutputPlainFile = Path.of("diff-output-plain.txt");
         Path diffOutputPlainMarkdown = Path.of("diff-output-markdown.md");
 
-        File ontLeft = FileUtils.createTempFile(ontologyLeftFilename, diffAdd.gitRawFileLeft());
-        File ontRight = FileUtils.createTempFile(ontologyRightFilename, diffAdd.gitRawFileRight());
+        try {
+            File ontLeft = FileUtils.createTempFile(ontologyLeftFilename, diffAdd.gitRawFileLeft());
+            File ontRight = FileUtils.createTempFile(ontologyRightFilename, diffAdd.gitRawFileRight());
 
-        OWLOntology loadedOntologyLeft = OntologyUtils.loadOntology(ontLeft);
-        OWLOntology loadedOntologyRight = OntologyUtils.loadOntology(ontRight);
+            OWLOntology loadedOntologyLeft = OntologyUtils.loadOntology(ontLeft);
+            OWLOntology loadedOntologyRight = OntologyUtils.loadOntology(ontRight);
 
-        OWLOntologySetProvider ontologySetProvider = new DualOntologySetProvider(
-                loadedOntologyLeft.getOWLOntologyManager(),
-                loadedOntologyRight.getOWLOntologyManager()
-        );
+            OWLOntologySetProvider ontologySetProvider = new DualOntologySetProvider(
+                    loadedOntologyLeft.getOWLOntologyManager(),
+                    loadedOntologyRight.getOWLOntologyManager()
+            );
 
-        Differ.BasicDiff differ = Differ.diff(loadedOntologyLeft, loadedOntologyRight);
-        Differ.GroupedDiff groupedForMarkdown = Differ.groupedDiff(differ);
+            Differ.BasicDiff differ = Differ.diff(loadedOntologyLeft, loadedOntologyRight);
+            Differ.GroupedDiff groupedForMarkdown = Differ.groupedDiff(differ);
 
-        Files.write(diffOutputPlainFile, BasicDiffRenderer.renderPlain(differ).getBytes());
-        Files.write(diffOutputPlainMarkdown, MarkdownGroupedDiffRenderer.render(groupedForMarkdown, ontologySetProvider).getBytes());
-
-
-        List<String> lines = Files.readAllLines(diffOutputPlainFile, StandardCharsets.UTF_8);
-        String line = Files.readString(diffOutputPlainMarkdown, StandardCharsets.UTF_8);
+            Files.write(diffOutputPlainFile, BasicDiffRenderer.renderPlain(differ).getBytes());
+            Files.write(diffOutputPlainMarkdown, MarkdownGroupedDiffRenderer.render(groupedForMarkdown, ontologySetProvider).getBytes());
 
 
-        Map<String, List<Axiom>> axioms = ParserUtils.parseAxioms(lines);
+            List<String> lines = Files.readAllLines(diffOutputPlainFile, StandardCharsets.UTF_8);
+            String line = Files.readString(diffOutputPlainMarkdown, StandardCharsets.UTF_8);
 
-        Document markdown = new Document().append("file", line);
 
-        Diff diff = Diff.builder()
-                .ontologyId("default")
-                .markdown(markdown)
-                .timestamp(diffAdd.commitDate())
-                .sha(diffAdd.sha())
-                .parentSha(diffAdd.parentSha())
-                .parentOffsetDateTime(diffAdd.parentOffsetDateTime())
-                .shaOffsetDateTime(diffAdd.shaOffsetDateTime())
-                .axioms(axioms)
-                .message(diffAdd.message())
-                .build();
+            Map<String, List<Axiom>> axioms = ParserUtils.parseAxioms(lines);
 
-        if (diff != null) {
-            return diffRepository.insert(diff);
-        } else {
-            return null;
+            Document markdown = new Document().append("file", line);
+
+            Diff diff = Diff.builder()
+                    .ontologyId("default")
+                    .markdown(markdown)
+                    .timestamp(diffAdd.commitDate())
+                    .sha(diffAdd.sha())
+                    .parentSha(diffAdd.parentSha())
+                    .parentOffsetDateTime(diffAdd.parentOffsetDateTime())
+                    .shaOffsetDateTime(diffAdd.shaOffsetDateTime())
+                    .axioms(axioms)
+                    .message(diffAdd.message())
+                    .build();
+
+            if (diff != null) {
+                return diffRepository.insert(diff);
+            } else {
+                return null;
+            }
+        } catch (Exception e) {
+            log.error("Error happened during diff creation: " + e.getMessage());
         }
+
+        return null;
     }
 
     public void assignOntologyId(List<Diff> diffIds, String ontologyId) {
